# SAP___aas-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  REUSE.toml  SECURITY.md  claude_desktop_config.example.json  client_config_examples.txt  config.yaml.example  config.yaml.template  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  version-bump.yml
configs/: README.md  basyx-config.example.yaml  basyx-config.yaml  config.yaml.template  sap-bnac-config.example.yaml  test-curation-config.yaml
docs/: basyx-aas-registry-supported-endpoints.json  basyx-repo-supported-endpoints.json  basyx-submodel-registry-supported-endpoints.json
docs/superpowers/specs/: 2026-06-06-kyma-backend-auth-guide-design.md
openapi/: AssetAdministrationShellRegistryServiceSpecification-V3.1.1_SSP-001-resolved.yaml  AssetAdministrationShellRepositoryServiceSpecification-V3.1.1_SSP-001-resolved.yaml  ConceptDescriptionRepositoryServiceSpecification-V3.1.1_SSP-001-resolved.yaml  SubmodelRegistryServiceSpecification-V3.1.1_SSP-001-resolved.yaml  SubmodelRepositoryServiceSpecification-V3.1.1_SSP-001-resolved.yaml  aas-registry.yaml  aas-repo.yaml  concept-description-repo.yaml  submodel-repo.yaml
openapi/derived/: AssetAdministrationShellRegistryServiceSpecification-V3.1.1_SSP-001-resolved-derived.yaml  AssetAdministrationShellRepositoryServiceSpecification-V3.1.1_SSP-001-derived.yaml  AssetAdministrationShellRepositoryServiceSpecification-V3.1.1_SSP-001-resolved-derived.yaml  SubmodelRegistryServiceSpecification-V3.1.1_SSP-001-resolved-derived.yaml  SubmodelRepositoryServiceSpecification-V3.1.1_SSP-001-resolved-derived.yaml  aas-repo-derived.yaml
openapi/overlays/: aas-registry-overlay.yaml  aas-repo-overlay.yaml  submodel-registry-overlay.yaml  submodel-repo-overlay.yaml
scripts/: bundle_openapi.sh  generate_derived_spec.py  generate_filters.py  generate_implementation.py  run_inspector.sh  validate_derived_specs.py
src/aas_mcp_server/: __init__.py  backend_auth.py  cli.py  config.py  constants.py  http_client.py  logging.py  openapi_loader.py  resources.py  server.py  spec_processor.py  tool_curation.py
tests/: test_auth.py  test_backend_auth.py  test_cli.py  test_http_client.py  test_logging.py  test_openapi_loader.py  test_resources.py  test_server.py  test_tool_curation.py
