[project]
name = "aas-mcp-server"
version = "0.1.0"
description = "Open-source MCP server for AAS (Asset Administration Shell) APIs using OpenAPI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "SAP SE", email = "ospo@sap.com" }
]
maintainers = [
    { name = "SAP SE", email = "ospo@sap.com" }
]
keywords = [
    "aas",
    "asset-administration-shell",
    "mcp",
    "model-context-protocol",
    "openapi",
    "llm",
    "digital-twin",
    "industry-4.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=3.3.1,<4.0",
    "httpx>=0.28.1,<1.0",
    "mcp[cli]>=1.26.0,<2.0",
    "oas-patch>=0.5.6,<1.0",
    "pyyaml>=6.0.3,<7.0",
]

[project.urls]
Homepage = "https://github.com/SAP/aas-mcp-server"
Documentation = "https://github.com/SAP/aas-mcp-server#readme"
Repository = "https://github.com/SAP/aas-mcp-server"
Issues = "https://github.com/SAP/aas-mcp-server/issues"

[project.scripts]
aas-mcp-server = "aas_mcp_server.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include files specified in MANIFEST.in
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.5",
    "mypy>=1.14.1",
]
